--- a/views/app/termsandconditions.ejs
+++ b/views/app/termsandconditions.ejs
@@ -11,8 +11,11 @@
     <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="shortcut icon" type="image/x-icon">
     <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="apple-touch-icon">
 </head>
-<body style="background-image: linear-gradient(45deg, #2f1cbb, #0e3247); color: aliceblue; font-family: Arial, Helvetica, sans-serif;">
-    <%- include('../includes/navigation.ejs') %>
+<body class="blueShade text-white">
+<%- include('../includes/navigation.ejs') %>
+
+<div class="p-l-20">
+
 <h2><strong>Terms and Conditions</strong></h2>
 
 <p>Welcome to ildecimo.it!</p>
@@ -40,8 +43,6 @@
     <li>Reproduce, duplicate or copy material from ildecimo.it</li>
     <li>Redistribute content from ildecimo.it</li>
 </ul>
-
-<p>This Agreement shall begin on the date hereof. Our Terms and Conditions were created with the help of the <a style="color: pink;" href="https://www.termsandconditionsgenerator.com/">Free Terms and Conditions Generator</a>.</p>
 
 <p>Parts of this website offer an opportunity for users to post and exchange opinions and information in certain areas of the website. ildecimo does not filter, edit, publish or review Comments prior to their presence on the website. Comments do not reflect the views and opinions of ildecimo,its agents and/or affiliates. Comments reflect the views and opinions of the person who post their views and opinions. To the extent permitted by applicable laws, ildecimo shall not be liable for the Comments or for any liability, damages or expenses caused and/or suffered as a result of any use of and/or posting of and/or appearance of the Comments on this website.</p>
 
@@ -138,6 +139,8 @@
 <p>As long as the website and the information and services on the website are provided free of charge, we will not be liable for any loss or damage of any nature.</p>
 <br>
 <br>
+</div>
+
 <script src="/js/main.js"></script>
 </body>
 
