--- a/views/app/unjoin-match.ejs
+++ b/views/app/unjoin-match.ejs
@@ -20,9 +20,9 @@
             <br><br>
             <!-- <a class="btn" href="/matches/:matchId">Torna ai dettagli!</a> -->
         <% } else if (!playerIn && can_unjoin) { %>
-            <h1 style="color: #513dff;"">You're not in this match!</h1>
+            <h1 class="text-purple">You're not in this match!</h1>
         <% } else {%>
-            <h1 style="color: #513dff;"">You can't leave 24h before the match! </h1>
+            <h1 class="text-purple">You can't leave 24h before the match! </h1>
         <% } %>    
        
     </main>
