--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -99,7 +99,7 @@
     <div>
         <form action="/logout" method="POST">
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button style="display: none;" class="btnLogout" id="confirmLogout2" type="submit">Conferma Logout</button>
+            <button class="btnLogout" id="confirmLogout2" type="submit">Conferma Logout</button>
         </form>
     </div>
 </nav>
