--- a/views/admin/listUser.ejs
+++ b/views/admin/listUser.ejs
@@ -3,16 +3,16 @@
 
 </head>
 
-<body style="background-image: linear-gradient(125deg, #2f1cbb, #114766);">
+<body class="blueShade">
     <%- include('../includes/navigation.ejs') %>
     <main>
         <% if (us.length > 0) { %>
             <div class="grid">
                 <% for (let users of us) { %>
-                    <article class="card match-item" style="background-color: white;" onclick="location.assign('/utente/<%= users.usrName %>')">
+                    <article class="card match-item bgwhite" onclick="location.assign('/utente/<%= users.usrName %>')">
                         <header class="card__header">
                             <h1 class="match__title"><%= users.nome %> <%= users.cognome %></h1>
-                            <h2 class="match__playerCount" style="color: #513dff;"><%= users.usrName %></h2>
+                            <h2 class="match__playerCount"><%= users.usrName %></h2>
                         </header>
                         <div class="card__image">
                             <img src="../img/football-players.png" class="rounded-circle" alt="<%= users.usrName %>">
