--- a/views/app/join-match.ejs
+++ b/views/app/join-match.ejs
@@ -18,7 +18,7 @@
                 <button class="btn" type="submit">Confirm!</button>
             </form>
         <% } else {%>
-            <h1 style="color: #513dff;">You're already in!</h1>
+            <h1 class="text-purple">You're already in!</h1>
             <br><br>
             <a class="btn" href="/matches">Torna alla lista dei match!</a>
         <% } %>
