--- a/views/auth/checkOTP.ejs
+++ b/views/auth/checkOTP.ejs
@@ -10,12 +10,12 @@
 <body>
    <%- include('../includes/navigation.ejs') %>
     <div class="limiter">
-		<div class="container-login100" style="background-image: linear-gradient(135deg, #2f1cbb, #0e3247)">
+		<div class="container-login100">
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-60 p-b-54">
 				<form class="login100-form validate-form" action="/checkOTP" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 					<span class="login100-form-title p-b-20">Verifica OTP</span>
-					<div class="p-b-20" style="text-align: center;">L'otp scade tra: <span id="time">02:00</span> </div>
+					<div class="p-b-20 text-center">L'otp scade tra: <span id="time">02:00</span> </div>
 					<% if (errorMessage) { %>
 						<div class="flex-c-m">
 							<div class="popout error-message"><%= errorMessage %></div>
