--- a/views/includes/voting.ejs
+++ b/views/includes/voting.ejs
@@ -1,6 +1,6 @@
 <h2>Vote the match!</h2>
 
-<div style="text-align: center;">
+<div class="text-center">
   <ul class="feedback">
     <li id="noneVote" class="noneVote <% if(m_vote === "") { %> active <% } %>"" hidden></li>
     <li class="angry <% if(m_vote === "angry") { %> active <% } %>">
@@ -66,7 +66,7 @@
   <li><div id="counterHappy"><%= m.votes.happy %></div></li>
 </ul>
 
-<svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+<svg class="dis-none" xmlns="http://www.w3.org/2000/svg">
   <symbol xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7 4" id="eye">
     <path
       d="M1,1 C1.83333333,2.16666667 2.66666667,2.75 3.5,2.75 C4.33333333,2.75 5.16666667,2.16666667 6,1"
