--- a/views/user/editPass.ejs
+++ b/views/user/editPass.ejs
@@ -7,15 +7,11 @@
 
 </head>
 
-<script>
-    console.log("<%= primaModifica %>");
-</script>
-
 <body>
     <%- include('../includes/navigation.ejs') %>
     <div class="main-content">
         <!-- Header -->
-        <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url('../img/background.jpg'); background-size: cover; background-position: center top;">
+        <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center imageBackround">
         <!-- Mask -->
             <span class="mask bg-gradient-default opacity-7"></span>
             <!-- Page content -->
