--- a/views/user/editUser.ejs
+++ b/views/user/editUser.ejs
@@ -8,7 +8,7 @@
     <%- include('../includes/navigation.ejs') %>
     <div class="main-content">
         <!-- Header -->
-        <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center" style="min-height: 600px; background-image: url('../img/background.jpg'); background-size: cover; background-position: center top;">
+        <div class="header pb-8 pt-5 pt-lg-8 d-flex align-items-center imageBackround">
         <!-- Mask -->
             <span class="mask bg-gradient-default opacity-7"></span>
             <!-- Page content -->
