--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -92,7 +92,7 @@
                 <a class="<%= path === '/profile' ? 'active' : '' %>" href="/myprofile">My Profile</a>
             </li>
             <li class="mobile-nav__item">
-                <button onclick="popup2()" id="logoutButton" type="submit">Logout</button>
+                <button id="logoutButton2" type="submit">Logout</button>
             </li>
         <% } %>
     </ul>
