--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -10,6 +10,6 @@
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/util.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="shortcut icon" type="image/x-icon">
-    <link href="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" rel="apple-touch-icon">
+    <link href="/img/field.png" rel="shortcut icon" type="image/x-icon">
+    <link href="/img/field.png" rel="apple-touch-icon">
    
