--- a/views/user/edit-match.ejs
+++ b/views/user/edit-match.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/login.css">
 </head>
 
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="/js/lotties.js"></script>
 
 <body>
     <%- include('../includes/navigation.ejs') %>
