--- a/views/user/mymatches.ejs
+++ b/views/user/mymatches.ejs
@@ -16,7 +16,7 @@
                                 <h1 class="match__title"><%= match.title %></h1>
                             </header>
                             <div class="card__image">
-                                <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
+                                <img src="/img/field.png" alt="<%= match.title %>">
                             </div>
                             <div class="card__content">
                                 <h2 class="match__place"><%= match.placeName %></h2>
@@ -53,7 +53,7 @@
                                 <h1 class="match__title"><%= match.title %></h1>
                             </header>
                             <div class="card__image">
-                                <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
+                                <img src="/img/field.png" alt="<%= match.title %>">
                             </div>
                             <div class="card__content">
                                 <h2 class="match__place"><%= match.placeName %></h2>
