--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -15,7 +15,7 @@
                             <h2 class="match__playerCount"><%= match.totalPlayers /2 %> vs <%= match.totalPlayers /2 %></h2>
                         </header>
                         <div class="card__image">
-                            <img src="https://cdn3.iconfinder.com/data/icons/choosesport/png/512/football.png" alt="<%= match.title %>">
+                            <img src="/img/field.png" alt="<%= match.title %>">
                         </div>
                         <div class="card__content">
                             <% if (match.currentPlayers == match.totalPlayers) { %>
