--- a/views/user/add-match.ejs
+++ b/views/user/add-match.ejs
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/util.css">
 </head>
 
-<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+<script src="/js/lotties.js"></script>
 
 <body>
     <%- include('../includes/navigation.ejs') %>
