--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -84,12 +84,12 @@
                         <span>Or Sign Up Using</span>
                     </div>
                     <div class="flex-c-m">
-                        <a href="/login/federated/facebook" class="login100-social-item bg1">
+                        <!-- <a href="#" class="login100-social-item bg1">
                             <i class="fa fa-facebook"></i>
                         </a>
                         <a href="#" class="login100-social-item bg2">
                             <i class="fa fa-twitter"></i>
-                        </a>
+                        </a> -->
                         <a href="/login/federated/google" class="login100-social-item bg3">
                             <i class="fa fa-google"></i>
                         </a>
