--- a/views/app/unjoin-match.ejs
+++ b/views/app/unjoin-match.ejs
@@ -21,7 +21,7 @@
         <% } else if (!playerIn && can_unjoin) { %>
             <h1 class="text-purple">You're not in this match!</h1>
         <% } else {%>
-            <h1 class="text-purple">You can't leave 24h before the match! </h1>
+            <h1 class="text-purple">Non puoi abbandonare 4 ore prima della partita! </h1>
         <% } %>    
        
     </main>
