--- a/views/user/add-match.ejs
+++ b/views/user/add-match.ejs
@@ -18,7 +18,7 @@
         <% } %>
         <div class="container">
             <div class="card">
-                <h2 class="card-heading">Create your match!</h2>
+                <h2 class="card-heading">Crea la tua partita!</h2>
                 <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_VB3ALHSv6V.json"  background="transparent"  speed="0.2"  loop  autoplay></lottie-player>
                 <form class="card-form" action="/add-match" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
@@ -86,7 +86,7 @@
                         <span class="focus-input100" data-symbol="&#xf262;"></span>
                     </div>
                     <div class="action">
-                        <button class="action-button" type="submit">Create the match</button>
+                        <button class="action-button" type="submit">Crea la partita</button>
                     </div>
                     <br>
                 </form>
