--- a/views/user/editPass.ejs
+++ b/views/user/editPass.ejs
@@ -42,7 +42,7 @@
                                         <% } %> 
                                         <% if (primaModifica === true || primaModifica === "true") { %>
                                             <div class="wrap-input100 validate-input m-b-23">
-                                                <span class="label-input100">Old Password</span>
+                                                <span class="label-input100">Vecchia Password</span>
                                                 <input
                                                     class="<%= validationErrors.find(e => e.param == 'oldPassword') ? 'input100-invalid' : 'input100' %>"
                                                     placeholder="Type your Old password" required
@@ -51,7 +51,7 @@
                                             </div>
                                         <% } %>
                                         <div class="wrap-input100 validate-input m-b-23">
-                                            <span class="label-input100">New Password</span>
+                                            <span class="label-input100">Nuova Password</span>
                                             <input
                                                 class="<%= validationErrors.find(e => e.param == 'newPassword') ? 'input100-invalid' : 'input100' %>"
                                                 placeholder="Type a New password" required
@@ -59,7 +59,7 @@
                                             <span class="focus-input100" data-symbol="&#xf190;"></span>
                                         </div>
                                         <div class="wrap-input100 validate-input m-b-23">
-                                            <span class="label-input100">Confirm Password</span>
+                                            <span class="label-input100">Conferma Password</span>
                                             <input
                                                 class="<%= validationErrors.find(e => e.param == 'confirmPassword') ? 'input100-invalid' : 'input100' %>"
                                                 placeholder="Confirm the New password" required
