--- a/views/app/match-list.ejs
+++ b/views/app/match-list.ejs
@@ -4,11 +4,14 @@
 </head>
 
 <body class="blueShade">
+    
     <%- include('../includes/navigation.ejs') %>
     <main>
         <% if (ms.length > 0) { %>
             <div class="grid">
                 <% for (let match of ms) { %>
+                    <% const ore = (match.time.getHours() - 2);%>
+                    <% const minuti = (match.time.getMinutes() ).toString().padStart(2, '0'); %>
                     <article class="card match-item" onclick="location.assign('/matches/<%= match._id %>')">
                         <header class="card__header">
                             <h1 class="match__title"><%= match.title %></h1>
@@ -28,6 +31,7 @@
                             <br>
                             <h2 class="match__place"><%= match.placeName %></h2>
                             <h2 class="match__place"><%= match.time.getDate().toString()+"-"+(match.time.getMonth()+1).toString()+"-"+match.time.getFullYear().toString() %></h2>
+                            <h2 class="match__place"> <%= ore + ":"+ minuti %></h2><br>
                             <h2 class="match__price"><%= match.price %>€</h2><br>
                             <p class="match__description"><%= match.description %></p>
                         </div>
