--- a/views/app/match-detail.ejs
+++ b/views/app/match-detail.ejs
@@ -11,6 +11,8 @@
 <body>
     <% const ore = m.time.getHours().toString().padStart(2, '0');%>
     <% const minuti = (m.time.getMinutes() ).toString().padStart(2, '0'); %>
+    <% const giorniSettimana = ["Domenica", "Lunedì", "Martedì", "Mercoledì", "Giovedì", "Venerdì", "Sabato"]; %>
+    <% const giorno = giorniSettimana[m.time.getDay()]; %>
     <%- include('../includes/navigation.ejs') %>
     <main class="centered">
         <h1><%= m.title %></h1>
@@ -24,14 +26,23 @@
                 <div class="card__content">
                     <h2>Giocatori mancanti: <%= m.totalPlayers - m.currentPlayers %></h2><br>
                     <h2 class="match__place">Dove: <%= m.placeName %></h2><br>
-                    <h2 class="match__place">Quando: <%= m.time.getDate().toString() + "-" + (m.time.getMonth()+1).toString() + "-" + m.time.getFullYear().toString() %></h2><br>
-                    <h2 class="match__place">A che ora: <%= ore + ":"+ minuti %></h2><br>
-                    <h2 class="match__place"> <%= m.time %></h2><br>
+                    <h2 class="match__place">Quando: <%= giorno + " "+ m.time.getDate().toString() + "-" + (m.time.getMonth()+1).toString() + "-" + m.time.getFullYear().toString() %></h2><br>
+                    <h2 class="match__place">A che ora: <%= ore + ":"+ minuti %></h2><br>                    
 
                     <h2 class="match__price"><%= m.price %>€</h2><br>
                     <p class="match__description"><%= m.description %></p>
                 </div>
                 <div class="card__actions">
+                    <% if (isAdministrator) { %>
+                        <div class="card__actions">
+                            <a href="/edit-match/<%= m._id %>?edit=true" class="btn">Edit</a>
+                            <form action="/delete-match/" method="POST">
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>">
+                                <input type="hidden" value="<%= m._id %>" name="matchId">
+                                <button class="btn" type="submit">Delete</button>
+                            </form>
+                        </div>
+                    <% } %>
                     <% if (isAuthenticated) { %>
                         <% if (is_full && is_in) { %>
                             <a href="/matches/<%= m._id %>/unjoin" class="btn">Esci dalla partita</a>
