--- a/views/user/edit-match.ejs
+++ b/views/user/edit-match.ejs
@@ -19,9 +19,26 @@
             <div class="card">
                 <h2 class="card-heading">Modifica la partita!</h2>
                 <lottie-player src="https://assets1.lottiefiles.com/packages/lf20_VB3ALHSv6V.json"  background="transparent"  speed="0.2" loop  autoplay></lottie-player>
+
                 <form class="card-form" action="/edit-match" method="POST">
                     <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                     <input type="hidden" value="<%= match._id %>" name="matchId">
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Aggiungi un calciatore, inserisci username</span>
+                        <input
+                            class="<%= validationErrors.find(e => e.param == 'players') ? 'input100-invalid' : 'input100' %>"
+                            value=""
+                            type="text" name="players" id="players" >
+                        <span class="focus-input100" data-symbol="&#xf212;"></span>
+                    </div>
+                    <div class="wrap-input100 validate-input m-b-23">
+                        <span class="label-input100">Rimuovi un calciatore, inserisci username</span>
+                        <input
+                            class="<%= validationErrors.find(e => e.param == 'removeplayer') ? 'input100-invalid' : 'input100' %>"
+                            value=""
+                            type="text" name="removeplayer" id="removeplayer">
+                        <span class="focus-input100" data-symbol="&#xf212;"></span>
+                    </div>
                     <div class="wrap-input100 validate-input m-b-23">
                         <span class="label-input100">Titolo della partita</span>
                         <input
